# nl-gov-data

./: .env.template  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: bootstrap-version.json
.claude/rules/: dev-patterns.md  testing-rules.md
.claude/skills/instruction-audit/: SKILL.md
.claude/skills/quality-check/: SKILL.md
.github/workflows/: ci.yml  smoke.yml
docs/: development.md  overview.md
src/nlgovdata/: __init__.py
src/nlgovdata/adapters/: __init__.py  base.py  koop.py  rijksoverheid.py  tk.py
src/nlgovdata/cli/: __init__.py  health.py  main.py
src/nlgovdata/core/: __init__.py  config.py  normalize.py  schema.py  source_info.py  types.py
src/nlgovdata/mcp/: __init__.py  dependencies.py  resources.py  server.py  tools_koop.py  tools_rijk.py  tools_tk.py  tools_unified.py
src/nlgovdata/utils/: http.py  odata.py  xml.py
tests/: __init__.py  conftest.py
tests/fixtures/koop/: search.xml
tests/fixtures/rijksoverheid/: documents.json  faq.json  ministries.json  news.json  subjects.json
tests/fixtures/tk/: activities.json  committees.json  documents.json  dossier.json  factions.json  people.json  votes.json
tests/smoke/: test_live_sources.py
tests/unit/: test_adapters.py  test_cli.py  test_http.py  test_mcp_resources.py  test_mcp_tools.py  test_normalize.py
