[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nl-gov-data"
version = "0.1.0"
description = "FastMCP server for Dutch government data sources"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "click>=8.1",
    "defusedxml>=0.7",
    "fastmcp>=2.14,<3",
    "httpx>=0.27",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
nlgovdata = "nlgovdata.cli.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "smoke: Live upstream smoke tests",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "ASYNC", "B", "PERF", "S"]
per-file-ignores = {"tests/**" = ["S101"]}

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
typeCheckingMode = "standard"
include = ["src/nlgovdata"]

[tool.hatch.build.targets.wheel]
packages = ["src/nlgovdata"]
